feat: docs to create user
